[gd_scene load_steps=4 format=3 uid="uid://bxk3getkqajfa"]

[ext_resource type="Script" path="res://scripts/conveyor_parent.gd" id="1_3n6tq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xrom3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8txvp"]
size = Vector3(0.5, 0.5, 0.5)

[node name="Conveyor_Parent" type="StaticBody3D"]
script = ExtResource("1_3n6tq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_xrom3")

[node name="Models" type="Node3D" parent="."]

[node name="ItemPlaceholder" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="ItemSprite" type="Sprite3D" parent="ItemPlaceholder"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
billboard = 1

[node name="NextConveyor" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="NextConveyor"]
shape = SubResource("BoxShape3D_8txvp")

[node name="Grabber" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Grabber"]
shape = SubResource("BoxShape3D_8txvp")

[node name="Setter" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Setter"]
shape = SubResource("BoxShape3D_8txvp")

[connection signal="body_entered" from="NextConveyor" to="." method="_on_next_conveyor_body_entered"]
[connection signal="body_entered" from="Grabber" to="." method="_on_grabber_body_entered"]
[connection signal="body_entered" from="Setter" to="." method="_on_setter_body_entered"]
